deploy/gitlab-ce.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gitlab
  name: gitlab-ce-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab-ce
  template:
    metadata:
      labels:
        app: gitlab-ce
    spec:
      containers:
        - name: gitlab-ce
          image: gitlab/gitlab-ce:16.3.2-ce.0
          ports:
            # kubectl -n gitlab port-forward svc/gitlab-ce 1800:80 --address 0.0.0.0
            - containerPort: 80
            - containerPort: 443
            - containerPort: 22
          volumeMounts:
            # https://docs.gitlab.cn/jh/install/docker.html
            # grep 'Password:' /etc/gitlab/initial_root_password
            - name: gitlab-ce-config
              mountPath: /etc/gitlab
            - name: gitlab-ce-logs
              mountPath: /var/log/gitlab
            - name: gitlab-ce-data
              mountPath: /var/opt/gitlab
      # https://kubernetes.io/zh-cn/docs/concepts/storage/volumes/
      # 配置挂载的数据卷
      volumes:
        - name: gitlab-ce-config
          persistentVolumeClaim:
            claimName: gitlab-ce-config-pvc
        - name: gitlab-ce-logs
          persistentVolumeClaim:
            claimName: gitlab-ce-logs-pvc
        - name: gitlab-ce-data
          persistentVolumeClaim:
            claimName: gitlab-ce-data-pvc

---

apiVersion: v1
kind: Service
metadata:
  namespace: gitlab
  name: gitlab-ce-service
spec:
  selector:
    app: gitlab-ce
  ports:
    - name: http
      nodePort: 31111
      port: 80
      targetPort: 80
    - name: https
      nodePort: 31112
      port: 443
      targetPort: 443
    - name: ssh
      nodePort: 31113
      port: 22
      targetPort: 22
  type: NodePort
