deploy/sonar-postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonar

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sonar
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15.2
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data/pgdata
      volumes:
        - name: pgdata
          nfs:
            path: /nfs/sonar/postgres/var/lib/postgresql/data/pgdata
            server: 172.25.25.5

---

apiVersion: v1
kind: Service
metadata:
  namespace: sonar
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - nodePort: 31669
      port: 5432
      targetPort: 5432
  type: NodePort
