deploy/sonar-sonarqube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sonar
  name: sonarqube-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:9.9.0-community
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: sonarqube-data
              mountPath: /opt/sonarqube/data
            - name: sonarqube-logs
              mountPath: /opt/sonarqube/logs
            - name: sonarqube-extensions
              mountPath: /opt/sonarqube/extensions
      volumes:
        - name: sonarqube-data
          nfs:
            path: /nfs/sonar/sonarqube/opt/sonarqube/data
            server: 172.25.25.5
        - name: sonarqube-logs
          nfs:
            path: /nfs/sonar/sonarqube/opt/sonarqube/logs
            server: 172.25.25.5
        - name: sonarqube-extensions
          nfs:
            path: /nfs/sonar/sonarqube/opt/sonarqube/extensions
            server: 172.25.25.5

---

apiVersion: v1
kind: Service
metadata:
  namespace: sonar
  name: sonarqube-service
spec:
  selector:
    app: sonarqube
  ports:
    - nodePort: 31666
      port: 9000
      targetPort: 9000
  type: NodePort
