deploy/nexus-ingress.yaml
# 此处使用的是泛域名
# KEY_FILE=_.xuxiaowei.cn.key
# CERT_FILE=_.xuxiaowei.cn.cer
# CERT_NAME=xuxiaowei.cn
# kubectl -n nexus create secret tls ${CERT_NAME} --key ${KEY_FILE} --cert ${CERT_FILE}

# kubectl -n nexus get secret xuxiaowei.cn -o jsonpath='{.data.tls\.crt}' | base64 --decode | openssl x509 -text

# kubectl -n nexus get secret xuxiaowei.cn -o jsonpath='{.data.tls\.crt}' | base64 --decode > tls.crt
# kubectl -n nexus get secret xuxiaowei.cn -o jsonpath='{.data.tls\.key}' | base64 --decode > tls.key

# kubectl -n nexus get ingress nexus-xuxiaowei-cn

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nexus
  name: nexus-xuxiaowei-cn
  annotations:
    # http 不强制跳转到 https（在 Linux 没有更新 ca-certificates 时，可能无法验证 SSL 证书，请使用浏览器“无痕模式”测试）
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # 防止上传较大文件时异常
    nginx.ingress.kubernetes.io/proxy-body-size: "10240m"
spec:
  ingressClassName: nginx
  rules:
    - host: nexus.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8081
            path: /
            pathType: Prefix
  tls:
    - secretName: xuxiaowei.cn
      hosts:
        - nexus.xuxiaowei.cn


---


# 此处使用的是泛域名
# KEY_FILE=_.minio.xuxiaowei.cn.key
# CERT_FILE=_.minio.xuxiaowei.cn.cer
# CERT_NAME=minio.xuxiaowei.cn
# kubectl -n nexus create secret tls ${CERT_NAME} --key ${KEY_FILE} --cert ${CERT_FILE}

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nexus
  name: nexus-minio-xuxiaowei-cn
  annotations:
    # 防止上传较大文件时异常
    nginx.ingress.kubernetes.io/proxy-body-size: "10240m"
spec:
  ingressClassName: nginx
  rules:
    - host: nexus.minio.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: minio-service
                port:
                  number: 9001
            path: /
            pathType: Prefix
  tls:
    - secretName: minio.xuxiaowei.cn
      hosts:
        - nexus.minio.xuxiaowei.cn


---


# 此处使用的是泛域名
# KEY_FILE=_.docker.xuxiaowei.cn.key
# CERT_FILE=_.docker.xuxiaowei.cn.cer
# CERT_NAME=docker.xuxiaowei.cn
# kubectl -n nexus create secret tls ${CERT_NAME} --key ${KEY_FILE} --cert ${CERT_FILE}

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nexus
  name: docker-xuxiaowei-cn
  annotations:
    # 防止推送较大 docker 镜像时异常
    nginx.ingress.kubernetes.io/proxy-body-size: "10240m"
spec:
  ingressClassName: nginx
  rules:
    - host: jihulab.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8001
            path: /
            pathType: Prefix
    - host: io.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8002
            path: /
            pathType: Prefix
    - host: gitlab-jh.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8003
            path: /
            pathType: Prefix
    - host: hosted.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8004
            path: /
            pathType: Prefix
    - host: 163.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8005
            path: /
            pathType: Prefix
    - host: group.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8006
            path: /
            pathType: Prefix
    - host: aliyuncs.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8007
            path: /
            pathType: Prefix
    - host: elastic.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8008
            path: /
            pathType: Prefix
    - host: oracle.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8009
            path: /
            pathType: Prefix
    - host: pig.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8010
            path: /
            pathType: Prefix
    - host: jihulab-proxy.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8011
            path: /
            pathType: Prefix
    - host: jeecg.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8012
            path: /
            pathType: Prefix
    - host: quay.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8013
            path: /
            pathType: Prefix
    - host: gitlab.docker.xuxiaowei.cn
      http:
        paths:
          - backend:
              service:
                name: nexus-service
                port:
                  number: 8014
            path: /
            pathType: Prefix
  tls:
    - secretName: docker.xuxiaowei.cn
      hosts:
        - jihulab.docker.xuxiaowei.cn
        - io.docker.xuxiaowei.cn
        - gitlab-jh.docker.xuxiaowei.cn
        - hosted.docker.xuxiaowei.cn
        - 163.docker.xuxiaowei.cn
        - group.docker.xuxiaowei.cn
        - aliyuncs.docker.xuxiaowei.cn
        - elastic.docker.xuxiaowei.cn
        - oracle.docker.xuxiaowei.cn
        - pig.docker.xuxiaowei.cn
        - jeecg.docker.xuxiaowei.cn
        - quay.docker.xuxiaowei.cn
        - gitlab.docker.xuxiaowei.cn
